# UCC

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  MEMORY.md  Procfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  railway.toml  settings.local.json
.cursor/rules/: gsd-project-context.md
.github/workflows/: ci.yml  scraper-smokes-scheduled.yml
.kiln/: REPORT.md  STATE.md  master-plan.md
.kiln/docs/: VISION.md  arch-constraints.md  architecture.md  codebase-state.md  decisions.md  deployment.md  patterns.md  pitfalls.md  research.md  tech-stack.md
.kiln/plans/: claude_plan.md  miyamoto_plan.md  plan_validation.md
.kiln/tmp/: assignment.xml  bootstrap-context.md  debate-resolution.md
.kiln/validation/: architecture-check.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agent/: __init__.py  graph.py  heartbeat.py  main.py
app/: __init__.py  config.py  db.py  logging.py  main.py
app/compliance/: __init__.py  exceptions.py  export_guard.py  gate.py  internal_dnc.py
app/consolidation/: __init__.py  checkpoints.py  classifier.py  pipeline.py  rollup.py  scorer.py
app/dashboard/: __init__.py  mca_lenders.py  queries.py  routes.py
app/enrichment/: __init__.py  backoff.py  cache.py  circuit_breaker.py  normalize.py  pipeline.py  rate_tracker.py  retry_worker.py  sources.py  waterfall.py
app/export/: __init__.py  (+7 more)
data/: debanked_mca_aliases.csv
docs/: brief.md  brownfield-architecture.md  florida-suppress-tier-analysis.md  new-york-scale-strategy.md  ny-volume-playbook.md  playwright-tier1-scrape-strategy.md
migrations/: env.py
scripts/: audit_fl_coverage.py  backfill_fl_secured_party.py  dashboard_local.py  deploy_railway.sh  e2e_local.py  export_mca_accounts_csv.py  import_debanked_mca_aliases.py  refresh_fl_mca.py  report_fl_data.py  rescore_accounts.py  rescore_leads.py  reset_fl_data.py  reset_state_data.py  run_fl_scrape.py  run_state_scrape.py  run_tier1_scrape.py  seed_mca_aliases.py  setup_local.sh  sync_mca_leads.py
tests/: __init__.py  conftest.py
watchdog/: __init__.py  logging_config.py  main.py  monitor.py
(+241 files in other folders)
