[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ucc-pipeline"
version = "0.1.0"
description = "UCC Lead Generation Platform - automated MCA debt lead pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "sentry-sdk>=2.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "agent*", "watchdog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
