[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucc-pipeline"
version = "0.1.0"
description = "UCC Lead Generation Platform - automated MCA debt lead pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "sentry-sdk>=2.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pybreaker>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "langgraph>=0.2.0",
    "anthropic>=0.30.0",
    "sendgrid>=6.10.0",
    "PyGithub>=2.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "twilio>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "agent*", "watchdog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live PostgreSQL (DATABASE_URL)",
    "slow: tests that hit the network or need Playwright/browser (excluded from default CI)",
    "smoke: scheduled-profile scraper sanity checks (often combined with slow)",
]
